# moju-derive

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
moju-derive-macros/: Cargo.toml
moju-derive-macros/src/: lib.rs
src/: lib.rs
tests/: derive_test.rs
