[package]
name = "moju-derive-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro implementation for moju-derive: generates MoJuItem trait impls from #[derive(MoJu)]"
license = "Apache-2.0"
repository = "https://github.com/dayu-sec/moju-derive"
readme = "../README.md"
keywords = ["moju", "derive", "metadata", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
